tests/expected/fac-rec.uc.out
/home/krikava/Teaching/FIT/NI-APR/2022/microc/tests/../examples/fac-rec.uc:[16:9]: error: I/O error Non-integer input
      n = input;
          ^

1
